enough for today

--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                                     <div class="flex-block_new-cup">
                                         <div>
                                             <img id='cup-color-tablet' src="assets/cup_black.png" alt="Cup"
-                                                 class="cup-image_new-cup">
+                                                 class="cup-image">
                                         </div>
                                         <div>
                                             <p>Стакан гофрований<br>110мл/175мл/275мл/400мл</p>
@@ -648,8 +648,8 @@
                             <div class="card_slider-cup">
                                 <div class="side_slider-cup front_slider-cup">
                                     <div class="slider_slider-cup">
-                                        <button class="slider-btn_slider-cup" onclick="prevImage('cup')">&#60;</button>
-                                        <button class="slider-btn_slider-cup" onclick="nextImage('cup')">&#62;</button>
+                                        <button class="slider-btn_slider-cup" onclick="prevImage('cup-tablet')">&#60;</button>
+                                        <button class="slider-btn_slider-cup" onclick="nextImage('cup-tablet')">&#62;</button>
                                     </div>
                                     <div class="flex-block_slider-cup">
                                         <div>
@@ -779,8 +779,8 @@
                             <div class="card_slider-cup">
                                 <div class="side_slider-cup front_slider-cup">
                                     <div class="slider_slider-cup">
-                                        <button class="slider-btn_slider-cup" onclick="prevImage('lid')">&#60;</button>
-                                        <button class="slider-btn_slider-cup" onclick="nextImage('lid')">&#62;</button>
+                                        <button class="slider-btn_slider-cup" onclick="prevImage('lid-tablet')">&#60;</button>
+                                        <button class="slider-btn_slider-cup" onclick="nextImage('lid-tablet')">&#62;</button>
                                     </div>
                                     <div class="flex-block_slider-cup">
                                         <div>
@@ -891,9 +891,9 @@
                             <div class="card_slider-cup">
                                 <div class="side_slider-cup front_slider-cup">
                                     <div class="slider_slider-cup">
-                                        <button class="slider-btn_slider-cup" onclick="prevImage('holder')">&#60;
+                                        <button class="slider-btn_slider-cup" onclick="prevImage('holder-tablet')">&#60;
                                         </button>
-                                        <button class="slider-btn_slider-cup" onclick="nextImage('holder')">&#62;
+                                        <button class="slider-btn_slider-cup" onclick="nextImage('holder-tablet')">&#62;
                                         </button>
                                     </div>
                                     <div class="flex-block_slider-cup">
@@ -944,9 +944,9 @@
                             <div class="card_slider-cup">
                                 <div class="side_slider-cup front_slider-cup">
                                     <div class="slider_slider-cup">
-                                        <button class="slider-btn_slider-cup" onclick="prevImage('tissue')">&#60;
+                                        <button class="slider-btn_slider-cup" onclick="prevImage('tissue-tablet')">&#60;
                                         </button>
-                                        <button class="slider-btn_slider-cup" onclick="nextImage('tissue')">&#62;
+                                        <button class="slider-btn_slider-cup" onclick="nextImage('tissue-tablet')">&#62;
                                         </button>
                                     </div>
                                     <div class="flex-block_slider-cup">
