--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <p><i class="fa fa-map-marker" aria-hidden="true"></i>Розташування</p>
                         <p>м.Черкаси, Вул. 30-річчя перемоги, 5/1</p>
                         <p><i class="fa fa-phone" aria-hidden="true"></i>Телефони та месенджери</p>
-                        <img src="assets/IMG_9725 1.png" alt="qr-code">
+                        <img src="assets/qr_code.png" alt="qr-code">
                         <p>+380951546753</p>
                     </div>
                 </div>
