add photos and location

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="contacts">
                 <img src="assets/call-calling.svg" alt="call">
-                <a href="tel:+380951546753" id="openDialogBtn">Контакти</a>
+                <a href="tel:+380970424390" id="openDialogBtn">Контакти</a>
             </div>
 
             <!-- Dialog Structure -->
@@ -35,7 +35,11 @@
                     <span class="close">&times;</span>
                     <div class="dialog-body">
                         <p><i class="fa fa-map-marker" aria-hidden="true"></i>Розташування</p>
-                        <p>м.Черкаси, Вул. 30-річчя перемоги, 5/1</p>
+                        <p>
+                            <a href="https://maps.app.goo.gl/PwXo8S31z56CQME9A?g_st=com.google.maps.preview.copy" target="_blank">
+                                м.Черкаси, Вул. 30-річчя перемоги, 5/1
+                            </a>
+                        </p>
                         <p><i class="fa fa-phone" aria-hidden="true"></i>Телефони та месенджери</p>
                         <img src="assets/qr_code.png" alt="qr-code">
                         <p>+380951546753</p>
@@ -648,16 +652,14 @@
                             <div class="card_slider-cup">
                                 <div class="side_slider-cup front_slider-cup">
                                     <div class="slider_slider-cup">
-                                        <button class="slider-btn_slider-cup" onclick="prevImage('cup-tablet')">&#60;
-                                        </button>
-                                        <button class="slider-btn_slider-cup" onclick="nextImage('cup-tablet')">&#62;
-                                        </button>
+                                        <button class="slider-btn_slider-cup" onclick="prevImage('cup-tablet')">&#60;</button>
+                                        <button class="slider-btn_slider-cup" onclick="nextImage('cup-tablet')">&#62;</button>
                                     </div>
                                     <div class="flex-block_slider-cup">
                                         <div>
                                             <img id='cup-tablet' src="assets/coffee_factory.png" alt="Cup">
                                         </div>
-                                        <div>
+                                        <div class="text-block">
                                             <p style="text-align: center">Стакан двошаровий<br>175мл/250мл/400мл</p>
                                         </div>
                                     </div>
@@ -667,44 +669,34 @@
                                         <ul>
                                             <li>
                                                 <div class="li-block">
-                                                    <div><img src="assets/Animation%20-%201723209070761.gif"
-                                                              style="width: 25px"
-                                                              alt="icon-check"></div>
+                                                    <div><img src="assets/Animation%20-%201723209070761.gif" style="width: 25px" alt="icon-check"></div>
                                                     <div>
                                                         <p>Щільність:</p>
-                                                        <p>175мл -195 г/м2 <br>
-                                                            250мл -215 г/м2 <br>
-                                                            400мл -235 г/м2 <br></p>
+                                                        <p>175мл -195 г/м2 <br>250мл -215 г/м2 <br>400мл -235 г/м2 <br></p>
                                                     </div>
-
                                                 </div>
                                             </li>
                                             <li>
                                                 <div class="li-block">
-                                                    <div><img src="assets/Animation%20-%201723209070761.gif"
-                                                              style="width: 25px"
-                                                              alt="icon-check"></div>
-                                                    <p>Брендовані від 6000 шт.</p></div>
+                                                    <div><img src="assets/Animation%20-%201723209070761.gif" style="width: 25px" alt="icon-check"></div>
+                                                    <p>Брендовані від 6000 шт.</p>
+                                                </div>
                                             </li>
                                             <li>
                                                 <div class="li-block">
-                                                    <div><img src="assets/Animation%20-%201723209070761.gif"
-                                                              style="width: 25px"
-                                                              alt="icon-check"></div>
-                                                    <p>З власним дизайном</p></div>
+                                                    <div><img src="assets/Animation%20-%201723209070761.gif" style="width: 25px" alt="icon-check"></div>
+                                                    <p>З власним дизайном</p>
+                                                </div>
                                             </li>
                                             <li>
                                                 <div class="li-block">
-                                                    <div><img src="assets/Animation%20-%201723209070761.gif"
-                                                              style="width: 25px"
-                                                              alt="icon-check"></div>
-                                                    <p>Будь-який колір</p></div>
+                                                    <div><img src="assets/Animation%20-%201723209070761.gif" style="width: 25px" alt="icon-check"></div>
+                                                    <p>Будь-який колір</p>
+                                                </div>
                                             </li>
                                         </ul>
                                         <div class="contact-button">
-                                            <button class="custom-button"><a href="https://t.me/curly_genie"
-                                                                             target="_blank">Зв'язатись</a>
-                                            </button>
+                                            <button class="custom-button"><a href="https://t.me/curly_genie" target="_blank">Зв'язатись</a></button>
                                         </div>
                                     </div>
                                 </div>
