try to search mistake with fliping card

--- a/index.html
+++ b/index.html
@@ -1878,6 +1878,7 @@
 
                 </div>
             </div>
+
             <div class="accessoriesForDrinks" id="drink-accessories">
                 <h2>Аксесуари для напоїв</h2>
 
@@ -2286,10 +2287,7 @@
                 </div>
 
 
-                <div id="myModal" class="myModal">
-                    <span class="myClose" onclick="myCloseModal()">&times;</span>
-                    <img class="myModal-content" id="img01" alt="img">
-                </div>
+
             </div>
             <div class="text-footer">
                 <p>**Фото на сайті ознайомлюючі і мають ілюстраційний характер. Зображення можуть мати відмінність від
@@ -2316,7 +2314,7 @@
 
 <div id="contactsDialog" class="dialog">
     <div class="dialog-content">
-        <span class="close">&times;</span>
+        <span class="dialog-close">&times;</span>
         <div class="dialog-body">
             <p><i class="fa fa-map-marker" aria-hidden="true"></i>Розташування</p>
             <p>
@@ -2329,6 +2327,11 @@
             <p>+380970424390</p>
         </div>
     </div>
+</div>
+
+<div id="myModal" class="myModal">
+    <span class="myClose" onclick="myCloseModal()">&times;</span>
+    <img class="myModal-content" id="img01" alt="img">
 </div>
 
 
