find and fix mistake with rotate in cards;

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>KraftPack | UA</title>
 </head>
@@ -1723,7 +1723,7 @@
                                     <div>
                                         <img id='cup' src="assets/coffee_factory.png" alt="Cup">
                                     </div>
-                                    <div>
+                                    <div class="text-block">
                                         <p style="text-align: center">Стакан двошаровий<br>175мл/250мл/400мл</p>
                                     </div>
                                 </div>
@@ -2095,7 +2095,7 @@
                                     <div>
                                         <img src="assets/wand.png" alt="Cup" class="cup-image_new-cup">
                                     </div>
-                                    <div>
+                                    <div class="text-block">
                                         <p style="text-align: center">Мішалка дерев’яна</p>
                                     </div>
                                 </div>
