--- a/index.html
+++ b/index.html
@@ -1952,7 +1952,7 @@
                         <div class="card">
                             <div class="side front">
                                 <div class="flex-block_new-cup">
-                                    <div>
+                                    <div class="box-image">
                                         <img src="assets/straw.png" alt="Cup" class="cup-image_new-cup">
                                     </div>
                                     <div>
