--- a/index.html
+++ b/index.html
@@ -1993,7 +1993,7 @@
                                         </li>
                                     </ul>
                                     <div class="contact-button">
-                                        <button class="custom-button"><a href="https://t.me/KRAFTPACK_UA"
+                                        <button class="custom-button kastyl1"><a href="https://t.me/KRAFTPACK_UA"
                                                                          target="_blank">Зв'язатись</a>
                                         </button>
                                     </div>
@@ -2044,7 +2044,7 @@
                                         </li>
                                     </ul>
                                     <div class="contact-button">
-                                        <button class="custom-button"><a href="https://t.me/KRAFTPACK_UA"
+                                        <button class="custom-button kastyl"><a href="https://t.me/KRAFTPACK_UA"
                                                                          target="_blank">Зв'язатись</a>
                                         </button>
                                     </div>
@@ -2081,7 +2081,7 @@
                                         </li>
                                     </ul>
                                     <div class="contact-button">
-                                        <button class="custom-button"><a href="https://t.me/KRAFTPACK_UA"
+                                        <button class="custom-button kastyl3"><a href="https://t.me/KRAFTPACK_UA"
                                                                          target="_blank">Зв'язатись</a>
                                         </button>
                                     </div>
