add last changes

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="tile">
                             <div class="card">
                                 <div class="side front">
-                                    <img src="assets/catalog-1.png" alt="Package 1">
+                                    <img src="assets/catalog-1.png" alt="Пакет паперовий">
                                     <p style="text-align: center">Пакет паперовий крафт 170х310х60мм</p>
                                 </div>
                                 <div class="side back">
@@ -1823,7 +1823,7 @@
                                         </li>
                                     </ul>
                                     <div class="contact-button">
-                                        <button class="custom-button"><a href="https://t.me/KRAFTPACK_UA"
+                                        <button class="custom-button kastyl"><a href="https://t.me/KRAFTPACK_UA"
                                                                          target="_blank">Зв'язатись</a>
                                         </button>
                                     </div>
